// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsDetail should match a snapshot for viewport desktop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot for viewport mobile 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot for viewport superWidescreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot for viewport tablet 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot for viewport widescreen 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="mocked-styled-44 el-loader-container"
        >
          <div
            class="mocked-styled-46 el-loader"
          >
            <div
              class="mocked-styled-47 el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot when not installed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-intent-primary el-persistent-notification"
          role="status"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name info"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            aria-live="polite"
            class="el-pn-content"
          >
            Interested in hearing more about this app? Click here and one of the Reapit Team will be in touch!
          </div>
        </div>
        <mock-styled.div>
          <span
            class="el-intent-primary el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronLeft"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </span>
        </mock-styled.div>
        <div
          class="el-flex-container el-mb5"
        >
          <mock-styled.div>
            <mock-styled.img
              alt="will-test-dev-co-voracious-person"
              classname="el-fade-in"
              src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
            />
          </mock-styled.div>
          <div
            class="el-flex-container el-flex-column el-flex-justify-between"
          >
            <div
              class="el-flex-container el-flex-column"
            >
              <h1
                class="el-text-base el-title el-has-no-margin"
              >
                will-test-dev-co-voracious-person
              </h1>
              <p
                class="el-text-base el-body-text el-has-grey-text"
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </p>
            </div>
            <div
              class="el-flex-container"
            >
              <span
                class="el-mr5 el-intent-success el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name check"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <small
                class="el-text-base el-small-text el-has-no-margin el-mr5"
              >
                Integration Enabled
              </small>
              <span
                class="el-mr5 el-intent-success el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name check"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <small
                class="el-text-base el-small-text el-has-no-margin el-mr5"
              >
                Verified by Reapit
              </small>
              <div
                class="mocked-styled-166 el-badge-group"
              >
                <div
                  class="mocked-styled-167 el-badge-group-inner"
                >
                  <mock-styled.div
                    classname="el-fade-in"
                  >
                    Category
                  </mock-styled.div>
                </div>
              </div>
              <small
                class="el-text-base el-small-text el-has-bold-text el-has-no-margin el-mr5"
              >
                Integration
              </small>
            </div>
          </div>
        </div>
        <div
          class="el-mb11 el-button-group"
        >
          <div
            class="el-button-group-align-left el-button-group-inner"
          >
            <a
              href="mailto:foo@bar.com?subject=will-test-dev-co-voracious-person%20Enquiry&body=Dear%20Will Test DevCo%2C%20%0A%0AI%20would%20like%20more%20information%20about%20will-test-dev-co-voracious-person%20featured%20in%20the%20Reapit%20AppMarket%20%0A%0ARegards"
              rel="noopener noreferrer"
              target="_blank"
            >
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Enquire About Integration
              </button>
            </a>
          </div>
        </div>
        <mock-styled.div>
          <mock-styled.div>
            <h2
              class="el-text-base el-subtitle el-has-bold-text"
            >
              About App
            </h2>
            <div
              class="html-render"
            >
              <mock-styled.div>
                <mock-styled.img
                  alt="Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar"
                  src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen1ImageUrl.png"
                />
              </mock-styled.div>
              <mock-styled.div>
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </mock-styled.div>
            </div>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="mocked-styled-3 el-button-group-inner"
              >
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  <div
                    class="el-flex-container el-flex-align-center"
                  >
                    <span
                      class="el-mr4 el-intent-primary el-icon-new el-icon"
                      style="font-size: 1.25em;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        style="font-size: 1.25em;"
                        title="Icon image with name video"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m10.365 16.018 5.503-3.54a.54.54 0 0 0 .255-.479.54.54 0 0 0-.255-.478l-5.503-3.539a.51.51 0 0 0-.585-.028.56.56 0 0 0-.298.513v7.066q0 .342.298.513a.51.51 0 0 0 .585-.028m-6.293 4.185q-.945 0-1.61-.665a2.2 2.2 0 0 1-.665-1.61V6.072q0-.945.665-1.61t1.61-.665h15.856q.945 0 1.61.665t.665 1.61v11.856q0 .944-.665 1.61-.665.665-1.61.665zm0-2.275h15.856V6.072H4.072z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    Getting started with 
                    will-test-dev-co-voracious-person
                  </div>
                </button>
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  <div
                    class="el-flex-container el-flex-align-center"
                  >
                    <span
                      class="el-mr4 el-intent-primary el-icon-new el-icon"
                      style="font-size: 1.25em;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        style="font-size: 1.25em;"
                        title="Icon image with name video"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m10.365 16.018 5.503-3.54a.54.54 0 0 0 .255-.479.54.54 0 0 0-.255-.478l-5.503-3.539a.51.51 0 0 0-.585-.028.56.56 0 0 0-.298.513v7.066q0 .342.298.513a.51.51 0 0 0 .585-.028m-6.293 4.185q-.945 0-1.61-.665a2.2 2.2 0 0 1-.665-1.61V6.072q0-.945.665-1.61t1.61-.665h15.856q.945 0 1.61.665t.665 1.61v11.856q0 .944-.665 1.61-.665.665-1.61.665zm0-2.275h15.856V6.072H4.072z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    Why 
                    will-test-dev-co-voracious-person
                  </div>
                </button>
              </div>
            </div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                numbercols="2"
                numberitems="1"
                percentagewidth="50.000"
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.img
                      alt="Application Image"
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen2ImageUrl.png"
                    />
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div
              classname="el-mb11"
            >
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Website
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Support Email
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="mailto:foo@bar.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    foo@bar.com
                  </a>
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Telephone
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  07777777777
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Terms and Conditions
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Privacy Policy
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Pricing Policy
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </mock-styled.div>
            </mock-styled.div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-text-base el-subtitle el-has-bold-text"
              >
                About Developer
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                All about us in a number of words
              </p>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-text-base el-subtitle el-has-bold-text"
              >
                Permissions
              </h2>
              <mock-styled.div>
                Read applicants
              </mock-styled.div>
              <mock-styled.div>
                Read property images
              </mock-styled.div>
              <mock-styled.div>
                Read properties
              </mock-styled.div>
              <p
                class="el-text-base el-body-text el-has-grey-text el-mt6"
              >
                For more detailed information about App permissions, please
                 
                <a
                  href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foundations-documentation.reapit.cloud/platform-glossary/permissions
                </a>
              </p>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-text-base el-subtitle el-has-bold-text"
              >
                AgencyCloud Launch Point
              </h2>
              <mock-styled.div>
                Applicant
              </mock-styled.div>
              <mock-styled.div>
                Applicant Export
              </mock-styled.div>
            </div>
          </mock-styled.div>
        </mock-styled.div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-intent-primary el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          Interested in hearing more about this app? Click here and one of the Reapit Team will be in touch!
        </div>
      </div>
      <mock-styled.div>
        <span
          class="el-intent-primary el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronLeft"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
              fill="currentColor"
            />
          </svg>
        </span>
      </mock-styled.div>
      <div
        class="el-flex-container el-mb5"
      >
        <mock-styled.div>
          <mock-styled.img
            alt="will-test-dev-co-voracious-person"
            classname="el-fade-in"
            src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
          />
        </mock-styled.div>
        <div
          class="el-flex-container el-flex-column el-flex-justify-between"
        >
          <div
            class="el-flex-container el-flex-column"
          >
            <h1
              class="el-text-base el-title el-has-no-margin"
            >
              will-test-dev-co-voracious-person
            </h1>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </p>
          </div>
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr5 el-intent-success el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name check"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <small
              class="el-text-base el-small-text el-has-no-margin el-mr5"
            >
              Integration Enabled
            </small>
            <span
              class="el-mr5 el-intent-success el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name check"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <small
              class="el-text-base el-small-text el-has-no-margin el-mr5"
            >
              Verified by Reapit
            </small>
            <div
              class="mocked-styled-166 el-badge-group"
            >
              <div
                class="mocked-styled-167 el-badge-group-inner"
              >
                <mock-styled.div
                  classname="el-fade-in"
                >
                  Category
                </mock-styled.div>
              </div>
            </div>
            <small
              class="el-text-base el-small-text el-has-bold-text el-has-no-margin el-mr5"
            >
              Integration
            </small>
          </div>
        </div>
      </div>
      <div
        class="el-mb11 el-button-group"
      >
        <div
          class="el-button-group-align-left el-button-group-inner"
        >
          <a
            href="mailto:foo@bar.com?subject=will-test-dev-co-voracious-person%20Enquiry&body=Dear%20Will Test DevCo%2C%20%0A%0AI%20would%20like%20more%20information%20about%20will-test-dev-co-voracious-person%20featured%20in%20the%20Reapit%20AppMarket%20%0A%0ARegards"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="el-intent-neutral el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Enquire About Integration
            </button>
          </a>
        </div>
      </div>
      <mock-styled.div>
        <mock-styled.div>
          <h2
            class="el-text-base el-subtitle el-has-bold-text"
          >
            About App
          </h2>
          <div
            class="html-render"
          >
            <mock-styled.div>
              <mock-styled.img
                alt="Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar"
                src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen1ImageUrl.png"
              />
            </mock-styled.div>
            <mock-styled.div>
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </mock-styled.div>
          </div>
          <div
            class="mocked-styled-2 el-button-group"
          >
            <div
              class="mocked-styled-3 el-button-group-inner"
            >
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                <div
                  class="el-flex-container el-flex-align-center"
                >
                  <span
                    class="el-mr4 el-intent-primary el-icon-new el-icon"
                    style="font-size: 1.25em;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25em;"
                      title="Icon image with name video"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m10.365 16.018 5.503-3.54a.54.54 0 0 0 .255-.479.54.54 0 0 0-.255-.478l-5.503-3.539a.51.51 0 0 0-.585-.028.56.56 0 0 0-.298.513v7.066q0 .342.298.513a.51.51 0 0 0 .585-.028m-6.293 4.185q-.945 0-1.61-.665a2.2 2.2 0 0 1-.665-1.61V6.072q0-.945.665-1.61t1.61-.665h15.856q.945 0 1.61.665t.665 1.61v11.856q0 .944-.665 1.61-.665.665-1.61.665zm0-2.275h15.856V6.072H4.072z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Getting started with 
                  will-test-dev-co-voracious-person
                </div>
              </button>
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                <div
                  class="el-flex-container el-flex-align-center"
                >
                  <span
                    class="el-mr4 el-intent-primary el-icon-new el-icon"
                    style="font-size: 1.25em;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25em;"
                      title="Icon image with name video"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m10.365 16.018 5.503-3.54a.54.54 0 0 0 .255-.479.54.54 0 0 0-.255-.478l-5.503-3.539a.51.51 0 0 0-.585-.028.56.56 0 0 0-.298.513v7.066q0 .342.298.513a.51.51 0 0 0 .585-.028m-6.293 4.185q-.945 0-1.61-.665a2.2 2.2 0 0 1-.665-1.61V6.072q0-.945.665-1.61t1.61-.665h15.856q.945 0 1.61.665t.665 1.61v11.856q0 .944-.665 1.61-.665.665-1.61.665zm0-2.275h15.856V6.072H4.072z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Why 
                  will-test-dev-co-voracious-person
                </div>
              </button>
            </div>
          </div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.div
              numbercols="2"
              numberitems="1"
              percentagewidth="50.000"
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.img
                    alt="Application Image"
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen2ImageUrl.png"
                  />
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Website
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Support Email
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="mailto:foo@bar.com"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  foo@bar.com
                </a>
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Telephone
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                07777777777
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Terms and Conditions
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Privacy Policy
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Pricing Policy
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </mock-styled.div>
          </mock-styled.div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-text-base el-subtitle el-has-bold-text"
            >
              About Developer
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              All about us in a number of words
            </p>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-text-base el-subtitle el-has-bold-text"
            >
              Permissions
            </h2>
            <mock-styled.div>
              Read applicants
            </mock-styled.div>
            <mock-styled.div>
              Read property images
            </mock-styled.div>
            <mock-styled.div>
              Read properties
            </mock-styled.div>
            <p
              class="el-text-base el-body-text el-has-grey-text el-mt6"
            >
              For more detailed information about App permissions, please
               
              <a
                href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foundations-documentation.reapit.cloud/platform-glossary/permissions
              </a>
            </p>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-text-base el-subtitle el-has-bold-text"
            >
              AgencyCloud Launch Point
            </h2>
            <mock-styled.div>
              Applicant
            </mock-styled.div>
            <mock-styled.div>
              Applicant Export
            </mock-styled.div>
          </div>
        </mock-styled.div>
      </mock-styled.div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-intent-primary el-persistent-notification"
          role="status"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name info"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            aria-live="polite"
            class="el-pn-content"
          >
            Interested in hearing more about this app? Click here and one of the Reapit Team will be in touch!
          </div>
        </div>
        <mock-styled.div>
          <span
            class="el-intent-primary el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name chevronLeft"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </span>
        </mock-styled.div>
        <div
          class="el-flex-container el-mb5"
        >
          <mock-styled.div>
            <mock-styled.img
              alt="will-test-dev-co-voracious-person"
              classname="el-fade-in"
              src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
            />
          </mock-styled.div>
          <div
            class="el-flex-container el-flex-column el-flex-justify-between"
          >
            <div
              class="el-flex-container el-flex-column"
            >
              <h1
                class="el-text-base el-title el-has-no-margin"
              >
                will-test-dev-co-voracious-person
              </h1>
              <p
                class="el-text-base el-body-text el-has-grey-text"
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </p>
            </div>
            <div
              class="el-flex-container"
            >
              <span
                class="el-mr5 el-intent-success el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name check"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <small
                class="el-text-base el-small-text el-has-no-margin el-mr5"
              >
                Verified by Reapit
              </small>
              <div
                class="mocked-styled-166 el-badge-group"
              >
                <div
                  class="mocked-styled-167 el-badge-group-inner"
                >
                  <mock-styled.div
                    classname="el-fade-in"
                  >
                    Category
                  </mock-styled.div>
                </div>
              </div>
              <small
                class="el-text-base el-small-text el-has-bold-text el-has-no-margin el-mr5"
              >
                Integration
              </small>
            </div>
          </div>
        </div>
        <div
          class="el-mb11 el-button-group"
        >
          <div
            class="el-button-group-align-left el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Enable Integration
            </button>
            <a
              href="mailto:foo@bar.com?subject=will-test-dev-co-voracious-person%20Enquiry&body=Dear%20Will Test DevCo%2C%20%0A%0AI%20would%20like%20more%20information%20about%20will-test-dev-co-voracious-person%20featured%20in%20the%20Reapit%20AppMarket%20%0A%0ARegards"
              rel="noopener noreferrer"
              target="_blank"
            >
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                Enquire About Integration
              </button>
            </a>
          </div>
        </div>
        <mock-styled.div>
          <mock-styled.div>
            <h2
              class="el-text-base el-subtitle el-has-bold-text"
            >
              About App
            </h2>
            <div
              class="html-render"
            >
              <mock-styled.div>
                <mock-styled.img
                  alt="Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar"
                  src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen1ImageUrl.png"
                />
              </mock-styled.div>
              <mock-styled.div>
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </mock-styled.div>
            </div>
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="mocked-styled-3 el-button-group-inner"
              >
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  <div
                    class="el-flex-container el-flex-align-center"
                  >
                    <span
                      class="el-mr4 el-intent-primary el-icon-new el-icon"
                      style="font-size: 1.25em;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        style="font-size: 1.25em;"
                        title="Icon image with name video"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m10.365 16.018 5.503-3.54a.54.54 0 0 0 .255-.479.54.54 0 0 0-.255-.478l-5.503-3.539a.51.51 0 0 0-.585-.028.56.56 0 0 0-.298.513v7.066q0 .342.298.513a.51.51 0 0 0 .585-.028m-6.293 4.185q-.945 0-1.61-.665a2.2 2.2 0 0 1-.665-1.61V6.072q0-.945.665-1.61t1.61-.665h15.856q.945 0 1.61.665t.665 1.61v11.856q0 .944-.665 1.61-.665.665-1.61.665zm0-2.275h15.856V6.072H4.072z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    Getting started with 
                    will-test-dev-co-voracious-person
                  </div>
                </button>
                <button
                  class="el-intent-neutral el-button"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  <div
                    class="el-flex-container el-flex-align-center"
                  >
                    <span
                      class="el-mr4 el-intent-primary el-icon-new el-icon"
                      style="font-size: 1.25em;"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        role="img"
                        style="font-size: 1.25em;"
                        title="Icon image with name video"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m10.365 16.018 5.503-3.54a.54.54 0 0 0 .255-.479.54.54 0 0 0-.255-.478l-5.503-3.539a.51.51 0 0 0-.585-.028.56.56 0 0 0-.298.513v7.066q0 .342.298.513a.51.51 0 0 0 .585-.028m-6.293 4.185q-.945 0-1.61-.665a2.2 2.2 0 0 1-.665-1.61V6.072q0-.945.665-1.61t1.61-.665h15.856q.945 0 1.61.665t.665 1.61v11.856q0 .944-.665 1.61-.665.665-1.61.665zm0-2.275h15.856V6.072H4.072z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    Why 
                    will-test-dev-co-voracious-person
                  </div>
                </button>
              </div>
            </div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                numbercols="2"
                numberitems="1"
                percentagewidth="50.000"
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.img
                      alt="Application Image"
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen2ImageUrl.png"
                    />
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div
              classname="el-mb11"
            >
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Website
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Support Email
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="mailto:foo@bar.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    foo@bar.com
                  </a>
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Telephone
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  07777777777
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Terms and Conditions
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Privacy Policy
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </mock-styled.div>
              <mock-styled.div>
                <h2
                  class="el-text-base el-subtitle el-has-no-margin"
                >
                  Pricing Policy
                </h2>
                <p
                  class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </mock-styled.div>
            </mock-styled.div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-text-base el-subtitle el-has-bold-text"
              >
                About Developer
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                All about us in a number of words
              </p>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-text-base el-subtitle el-has-bold-text"
              >
                Permissions
              </h2>
              <mock-styled.div>
                Read applicants
              </mock-styled.div>
              <mock-styled.div>
                Read property images
              </mock-styled.div>
              <mock-styled.div>
                Read properties
              </mock-styled.div>
              <p
                class="el-text-base el-body-text el-has-grey-text el-mt6"
              >
                For more detailed information about App permissions, please
                 
                <a
                  href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foundations-documentation.reapit.cloud/platform-glossary/permissions
                </a>
              </p>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-text-base el-subtitle el-has-bold-text"
              >
                AgencyCloud Launch Point
              </h2>
              <mock-styled.div>
                Applicant
              </mock-styled.div>
              <mock-styled.div>
                Applicant Export
              </mock-styled.div>
            </div>
          </mock-styled.div>
        </mock-styled.div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-intent-primary el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          Interested in hearing more about this app? Click here and one of the Reapit Team will be in touch!
        </div>
      </div>
      <mock-styled.div>
        <span
          class="el-intent-primary el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name chevronLeft"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
              fill="currentColor"
            />
          </svg>
        </span>
      </mock-styled.div>
      <div
        class="el-flex-container el-mb5"
      >
        <mock-styled.div>
          <mock-styled.img
            alt="will-test-dev-co-voracious-person"
            classname="el-fade-in"
            src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
          />
        </mock-styled.div>
        <div
          class="el-flex-container el-flex-column el-flex-justify-between"
        >
          <div
            class="el-flex-container el-flex-column"
          >
            <h1
              class="el-text-base el-title el-has-no-margin"
            >
              will-test-dev-co-voracious-person
            </h1>
            <p
              class="el-text-base el-body-text el-has-grey-text"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </p>
          </div>
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr5 el-intent-success el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name check"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.32 1.32 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <small
              class="el-text-base el-small-text el-has-no-margin el-mr5"
            >
              Verified by Reapit
            </small>
            <div
              class="mocked-styled-166 el-badge-group"
            >
              <div
                class="mocked-styled-167 el-badge-group-inner"
              >
                <mock-styled.div
                  classname="el-fade-in"
                >
                  Category
                </mock-styled.div>
              </div>
            </div>
            <small
              class="el-text-base el-small-text el-has-bold-text el-has-no-margin el-mr5"
            >
              Integration
            </small>
          </div>
        </div>
      </div>
      <div
        class="el-mb11 el-button-group"
      >
        <div
          class="el-button-group-align-left el-button-group-inner"
        >
          <button
            class="el-intent-primary el-button"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Enable Integration
          </button>
          <a
            href="mailto:foo@bar.com?subject=will-test-dev-co-voracious-person%20Enquiry&body=Dear%20Will Test DevCo%2C%20%0A%0AI%20would%20like%20more%20information%20about%20will-test-dev-co-voracious-person%20featured%20in%20the%20Reapit%20AppMarket%20%0A%0ARegards"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="el-intent-neutral el-button"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Enquire About Integration
            </button>
          </a>
        </div>
      </div>
      <mock-styled.div>
        <mock-styled.div>
          <h2
            class="el-text-base el-subtitle el-has-bold-text"
          >
            About App
          </h2>
          <div
            class="html-render"
          >
            <mock-styled.div>
              <mock-styled.img
                alt="Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar"
                src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen1ImageUrl.png"
              />
            </mock-styled.div>
            <mock-styled.div>
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </mock-styled.div>
          </div>
          <div
            class="mocked-styled-2 el-button-group"
          >
            <div
              class="mocked-styled-3 el-button-group-inner"
            >
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                <div
                  class="el-flex-container el-flex-align-center"
                >
                  <span
                    class="el-mr4 el-intent-primary el-icon-new el-icon"
                    style="font-size: 1.25em;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25em;"
                      title="Icon image with name video"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m10.365 16.018 5.503-3.54a.54.54 0 0 0 .255-.479.54.54 0 0 0-.255-.478l-5.503-3.539a.51.51 0 0 0-.585-.028.56.56 0 0 0-.298.513v7.066q0 .342.298.513a.51.51 0 0 0 .585-.028m-6.293 4.185q-.945 0-1.61-.665a2.2 2.2 0 0 1-.665-1.61V6.072q0-.945.665-1.61t1.61-.665h15.856q.945 0 1.61.665t.665 1.61v11.856q0 .944-.665 1.61-.665.665-1.61.665zm0-2.275h15.856V6.072H4.072z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Getting started with 
                  will-test-dev-co-voracious-person
                </div>
              </button>
              <button
                class="el-intent-neutral el-button"
              >
                <div
                  class="mocked-styled-0 el-button-loader"
                />
                <div
                  class="el-flex-container el-flex-align-center"
                >
                  <span
                    class="el-mr4 el-intent-primary el-icon-new el-icon"
                    style="font-size: 1.25em;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      role="img"
                      style="font-size: 1.25em;"
                      title="Icon image with name video"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m10.365 16.018 5.503-3.54a.54.54 0 0 0 .255-.479.54.54 0 0 0-.255-.478l-5.503-3.539a.51.51 0 0 0-.585-.028.56.56 0 0 0-.298.513v7.066q0 .342.298.513a.51.51 0 0 0 .585-.028m-6.293 4.185q-.945 0-1.61-.665a2.2 2.2 0 0 1-.665-1.61V6.072q0-.945.665-1.61t1.61-.665h15.856q.945 0 1.61.665t.665 1.61v11.856q0 .944-.665 1.61-.665.665-1.61.665zm0-2.275h15.856V6.072H4.072z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Why 
                  will-test-dev-co-voracious-person
                </div>
              </button>
            </div>
          </div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.div
              numbercols="2"
              numberitems="1"
              percentagewidth="50.000"
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.img
                    alt="Application Image"
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen2ImageUrl.png"
                  />
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Website
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Support Email
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="mailto:foo@bar.com"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  foo@bar.com
                </a>
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Telephone
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                07777777777
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Terms and Conditions
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Privacy Policy
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </mock-styled.div>
            <mock-styled.div>
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Pricing Policy
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </mock-styled.div>
          </mock-styled.div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-text-base el-subtitle el-has-bold-text"
            >
              About Developer
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              All about us in a number of words
            </p>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-text-base el-subtitle el-has-bold-text"
            >
              Permissions
            </h2>
            <mock-styled.div>
              Read applicants
            </mock-styled.div>
            <mock-styled.div>
              Read property images
            </mock-styled.div>
            <mock-styled.div>
              Read properties
            </mock-styled.div>
            <p
              class="el-text-base el-body-text el-has-grey-text el-mt6"
            >
              For more detailed information about App permissions, please
               
              <a
                href="https://foundations-documentation.reapit.cloud/platform-glossary/permissions"
                rel="noopener noreferrer"
                target="_blank"
              >
                https://foundations-documentation.reapit.cloud/platform-glossary/permissions
              </a>
            </p>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-text-base el-subtitle el-has-bold-text"
            >
              AgencyCloud Launch Point
            </h2>
            <mock-styled.div>
              Applicant
            </mock-styled.div>
            <mock-styled.div>
              Applicant Export
            </mock-styled.div>
          </div>
        </mock-styled.div>
      </mock-styled.div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
